# nemotron_infer

./: .gitignore  .python-version  CMakeLists.txt  README.md  library.cuh  main.py  pyproject.toml  tasks.py
nemotron_infer/: __init__.py  chat.py  engine.py
nemotron_infer/csrc/: binding.pyi
nemotron_infer/csrc/include/: binding.cu
nemotron_infer/csrc/include/model/: attention_block.cuh  mamba_block.cuh  mlp_block.cuh
nemotron_infer/csrc/include/ops/: cudnn_ctx.h  elementwise.cuh  embedding.cuh  gemm.cuh  gemv.cuh  ops.h  reduce.cuh
nemotron_infer/csrc/include/ops/attention/: sdpa_cudnn.cpp  sdpa_cudnn.h  sdpa_decode.cuh  sdpa_prefill.cuh
nemotron_infer/csrc/include/ops/mamba2/: causal_conv1d.cuh  ssd_scan.cuh  ssd_scan_chunked.cuh  ssd_scan_fused.cuh  ssm.cuh
nemotron_infer/csrc/include/tensor/: allocator.cuh  tensor.h
tests/: test_tensor.cu
tests/model/: test_attention_block.cu  test_mamba_block.cu  test_mlp_block.cu
tests/ops/: test_causal_conv1d.cu  test_elementwise.cu  test_embedding.cu  test_gemm.cu  test_reduce.cu  test_sdpa_decode.cu  test_sdpa_prefill.cu  test_ssd_scan.cu  test_ssm_decode.cu  test_tensor_view.cu
tools/: bench_decode.py  dump_attention_block.py  dump_mamba_block.py  dump_mlp_block.py  prof_decode.py  ref_full_model.py  validate_full.py
