[project]
name = "nemotron-infer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "numpy>=2.4.6",
    "pybind11>=3.0.4",
    "pybind11-stubgen<1",
]

# 仅 dev：用于生成 HF 金标准 dump（tools/dump_mamba_block.py）。release 推理不需要。
[dependency-groups]
dev = [
    "torch>=2.0",
]
